cmake_minimum_required(VERSION 3.17)

project(02-chapter)

add_executable(fartocel fartocel.cpp)
add_executable(circarea circarea.cpp)
add_executable(setw setw.cpp)

# own experiments
add_executable(ansii ansii.cpp)
add_executable(test1 test1.cpp)

# exercise
add_executable(ex01 ex201.cpp)
add_executable(ex02 ex202.cpp)
add_executable(ex03 ex203.cpp)
add_executable(ex04 ex204.cpp)
add_executable(ex05 ex205.cpp)
add_executable(ex06 ex206.cpp)
add_executable(ex07 ex207.cpp)
add_executable(ex08 ex208.cpp)
add_executable(ex09 ex209.cpp)