cmake_minimum_required(VERSION 3.17)

project(04-chapter)

add_executable(01-parts 01-parts.cpp)
add_executable(02-partinit 02-partinit.cpp)
add_executable(03-englstrc 03-englstrc.cpp)
add_executable(04-englarea 04-englarea.cpp)
add_executable(05-cards 05-cards.cpp)
add_executable(06-dayenum 06-dayenum.cpp)
add_executable(07-wdcount 07-wdcount.cpp)